--- a/src/containers/Login/css/index.less
+++ b/src/containers/Login/css/index.less
@@ -27,6 +27,7 @@ html,body{
         h1{
             font-size: 30px;
             color: white;
+            margin-bottom: 0px;
         }
     }
     section{
